
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct TYPE_2__ {int s_addr; } ;
struct sockaddr_in {TYPE_1__ sin_addr; int sin_port; int sin_family; } ;
struct sockaddr {int dummy; } ;
struct hostent {scalar_t__ h_addr; } ;
typedef int sa ;


 int AF_INET ;
 int IPPROTO_UDP ;
 int SOCK_DGRAM ;
 int close (int) ;
 int connect (int,struct sockaddr*,int) ;
 struct hostent* gethostbyname (char*) ;
 int htons (unsigned short) ;
 int inet_addr (char*) ;
 scalar_t__ malloc (int) ;
 int memcpy (char*,char*,int) ;
 int memset (unsigned char*,int,int) ;
 int printe (char*,int) ;
 int read (int,unsigned char*,int) ;
 int socket (int ,int ,int ) ;
 int write (int,char*,unsigned int) ;

char *send_packet(char *hostname,unsigned short port,
char *data,unsigned int len,unsigned short getreply){
 int u;
 unsigned char *buf;
 struct hostent *he;
 struct sockaddr_in sa;
 u=socket(AF_INET,SOCK_DGRAM,IPPROTO_UDP);
 sa.sin_family=AF_INET;
 sa.sin_port=htons(port);
 if((sa.sin_addr.s_addr=inet_addr(hostname))){
  if(!(he=gethostbyname(hostname))){
   printe("send_packet(): couldn't resolve",0);
   return("(NULL)");
  }
  memcpy((char *)&sa.sin_addr,(char *)he->h_addr,
  sizeof(sa.sin_addr));
 }

 connect(u,(struct sockaddr *)&sa,sizeof(sa));
 write(u,data,len);
 if(getreply){
  if(!(buf=(char *)malloc(512+1)))
   printe("send_packet(): allocating memory failed",1);
  memset(buf,0x0,(512+1));
  if(read(u,buf,512)<1){
   close(u);
   return("(NULL)");
  }
  close(u);
  return(buf);
 }
 close(u);
 return("(NULL)");
}
